# Deep-Explore

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  README.zh-CN.md  pyproject.toml  requirements.txt
deep_explore/: __init__.py
deep_explore/core/: __init__.py  action.py  action_check.py  action_executor.py  base_object.py  hooks.py  loader.py  mode.py  precondition.py  scenario.py  stopping_criteria.py
deep_explore/factories/: __init__.py
deep_explore/utils/: __init__.py  loader.py  public_manager.py  util.py
docs/: deep_explore架构设计文档.md
examples/: README.md  advanced_usage.py  basic_setup.py  custom_mode.py  scenario_config.yaml  scenario_test.py
examples/common/: __init__.py  mock_clients.py
tests/: __init__.py  test_core.py
