[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deep-explore"
version = "1.0.0"
description = "An automated functional exploration testing framework with FSM and MBT support"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.8"
authors = [
    {name = "Leo John", email = "leo@john.dev"}
]
maintainers = [
    {name = "Leo John", email = "leo@john.dev"}
]
keywords = [
    "testing",
    "automation",
    "fsm",
    "mbt",
    "state-machine",
    "model-driven-testing",
    "cloud-testing",
    "exploratory-testing",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/leojohn/deep-explore"
Repository = "https://github.com/leojohn/deep-explore.git"
Documentation = "https://github.com/leojohn/deep-explore/blob/main/docs/deep_explore架构设计文档.md"
"Bug Tracker" = "https://github.com/leojohn/deep-explore/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["deep_explore*"]

[tool.setuptools.package-data]
deep_explore = ["py.typed"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=22.0",
    "flake8>=5.0",
    "mypy>=1.0",
    "sphinx>=5.0",
    "sphinx-rtd-theme>=1.0",
]
yaml = [
    "pyyaml>=6.0",
]

[tool.black]
line-length = 100
target-version = ["py38"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
